Code changes for fdo#74107:File Corruption - Issue with outerShdw

Problem Description:
- In document.xml, outerShdw dist contains the negative value after roundtrip.
- Due to negative value file get corrupted.

XML difference:
 Roundtrip: Before fix
 <a:outerShdw dist="-1363652116480" dir="2700000">

 Roundtrip: After fix
 <a:outerShdw dist="57811035" dir="2700000">

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
Reviewed on:
	https://gerrit.libreoffice.org/7880

Change-Id: Ied752672244d5768dee554e907f2f4d7a9d077d5